<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ejercicio02_calculadora.MainActivity" >

    <Button
        android:id="@+id/boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:text="@string/boton_2" />

    <Button
        android:id="@+id/boton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="26dp"
        android:text="@string/boton_4" />

    <Button
        android:id="@+id/boton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boton4"
        android:layout_alignBottom="@+id/boton4"
        android:layout_alignLeft="@+id/boton2"
        android:text="@string/boton_5" />

    <Button
        android:id="@+id/boton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boton5"
        android:layout_alignBottom="@+id/boton5"
        android:layout_alignLeft="@+id/boton3"
        android:text="@string/boton_6" />

    <Button
        android:id="@+id/boton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/boton4"
        android:layout_below="@+id/boton4"
        android:layout_marginTop="16dp"
        android:text="@string/boton_7" />

    <Button
        android:id="@+id/boton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boton7"
        android:layout_alignBottom="@+id/boton7"
        android:layout_alignLeft="@+id/boton5"
        android:text="@string/boton_8" />

    <Button
        android:id="@+id/boton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boton8"
        android:layout_alignBottom="@+id/boton8"
        android:layout_alignLeft="@+id/boton6"
        android:text="@string/boton_9" />

    <Button
        android:id="@+id/boton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boton4"
        android:layout_toRightOf="@+id/boton2"
        android:text="@string/boton_3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:layout_toLeftOf="@+id/boton2"
        android:text="@string/boton_1" />

    <Button
        android:id="@+id/boton_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boton7"
        android:layout_marginTop="28dp"
        android:layout_toRightOf="@+id/boton7"
        android:text="@string/boton_0" />

    <Button
        android:id="@+id/boton_igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/boton_0"
        android:layout_alignRight="@+id/boton7"
        android:text="@string/boton_igual" />

    <Button
        android:id="@+id/botonsumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boton_0"
        android:layout_alignBottom="@+id/boton_0"
        android:layout_toRightOf="@+id/boton_0"
        android:text="@string/boton_sumar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boton2"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/textoVacio" />

    <Button
        android:id="@+id/boton_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/boton_igual"
        android:layout_alignRight="@+id/botonsumar"
        android:layout_below="@+id/boton_0"
        android:layout_marginTop="27dp"
        android:text="@string/botonc" />

</RelativeLayout>
